# torchjpeg

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  build.py  dev-requirements.txt  mypy.ini  pyproject.toml  setup.py  tasks.py  test_compress.py  test_decompress.py  test_quantize.py  torchjpeg.cpp  version.py
codec/: CMakeLists.txt  jdatadst.c  jdatadst.cpp  jinclude.h  torchjpeg.cpp
doc/: requirements.txt
doc/source/: conf.py  dct_and_color.md  dct_rw.md  index.md  index.rst  metrics_and_losses.md  modules.rst  quantization.md  torchjpeg.codec.rst  torchjpeg.data.rst  torchjpeg.dct.rst  torchjpeg.metrics.rst  torchjpeg.quantization.rst  torchjpeg.rst  torchjpeg.transforms.rst
doc/source/_static/: torchjpeg-logo.xcf
doc/source/api/: index.rst  torchjpeg.codec.rst  torchjpeg.data.rst  torchjpeg.dct.rst  torchjpeg.metrics.rst  torchjpeg.quantization.rst  torchjpeg.transforms.rst
examples/: color_test.py  compress.py  decompress.py  grayscale.py  ident.py  quantize.py
src/torchjpeg/: __init__.py
src/torchjpeg/codec/: __init__.py  codec_ops.cpp
src/torchjpeg/data/: __init__.py  folder_of_jpeg_dataset.py  image_list.py  jpeg_quantized_dataset.py  unlabeled_image_folder.py
src/torchjpeg/dct/: __init__.py  _block.py  _color.py  _nn.py  _stats.py
src/torchjpeg/dct/stats/: color.pt  grayscale.pt
src/torchjpeg/metrics/: __init__.py  _psnr.py  _psnrb.py  _size.py  _ssim.py
src/torchjpeg/quantization/: __init__.py  _quantize.py  ijg.py
src/torchjpeg/transforms/: __init__.py
test/import/: test_import.py
test/unit/: test_dct.py
torchjpeg/: __init__.py
torchjpeg/codec/: __init__.py  codec_ops.cpp  jdatadst.cpp  jdatadst.hpp
torchjpeg/data/: __init__.py  _color_transforms.py  _folder_of_images_dataset.py  _folder_of_jpeg_dataset.py  _jpeg_aug.py  _jpeg_quality_dataset.py  _jpeg_quantized_dataset.py
torchjpeg/dct/: __init__.py  _color.py  _dct.py  _dct_nn.py  _dct_stats.py  _nn.py  _stats.py  dct.py  dct_nn.py  dct_stats.py  stats.py
torchjpeg/metrics/: __init__.py  _psnr.py  _psnrb.py  _size.py  _ssim.py
torchjpeg/quantization/: __init__.py  _quantization.py  ijg.py  ijgquant.py  quantization.py
torchjpeg/transforms/: __init__.py
