[tool.poetry]

name = "torchjpeg"
version = "0.0.0" # This is a placeholder, version is set by the CI during build
description = "Utilities for JPEG data access and manipulation in pytorch"
authors = [
    "Max Ehrlich"
]

license = "MIT"
readme = "README.md"

homepage = "https://torchjpeg.gitlab.io/torchjpeg/"
repository = "https://gitlab.com/torchjpeg/torchjpeg"
documentation = "https://torchjpeg.gitlab.io/torchjpeg/"


classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha"
]


include = ["src/libjpeg/*"]

[tool.poetry.build]

script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]

python = ">= 3.8, < 4.0"

torch = ">= 2.0.0, < 2.0.1"
torchvision = ">= 0.15.1, < 0.15.2"

Pillow = ">=7.2.0"

[tool.poetry.dev-dependencies]

dunamai = "^1.15.0"

invoke = "^2.1.2"
colorama = "^0.4.3"

black = { version = "^22.3.0", python = ">=3.8 <4.0" }
isort = "^5.5.2"

mypy = "1.3.0"
pylint = "2.17.4"

sphinx = ">=2,<3"
sphinxcontrib-katex = "^0.8.6"
pydocstyle = "^5.0.2"
sphinx-book-theme = "^0.0.34"
myst-parser = "^0.9.1"
jinja2 = "<3.1"

pytest = "^6.0.0"

coverage = "^5.2.1"
pytest-cov = "^2.10.0"

virtualenv = "20.23.0"
setuptools= "67.8.0"

[tool.black]

line-length = 1000
target-version = ["py38", "py39", "py310", "py311"]

[tool.pylint.master]

init-hook='import sys; sys.path.append("src")'

unsafe-load-any-extension = true

[tool.pylint.messages_control]

# line-too-ling: I don't beleive in line length limits
# trailing-whitespace: triggers on docstrings which is unimportant (black probably fixes this for code)
# invalid-name: often use names from equations which can be considered invalid
# mising-module-docstring: many modules have a single function which contains a docstring
# wrong-import-order: isort takes care of this
# not-callable: https://github.com/pytorch/pytorch/pull/25093
# unsubscriptable-object: https://github.com/PyCQA/pylint/issues/3882
disable = """,
    line-too-long,
    trailing-whitespace,
    invalid-name,
    missing-module-docstring,
    wrong-import-order,
    not-callable
    """

[tool.pylint.typecheck]

generated-members = "numpy.*,torch.*"

[tool.pytest.ini_options]

addopts = "--cov=torchjpeg --cov-report term --cov-append"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.isort]

profile = "black"
line_length = 1000

[build-system]

requires = [
    "poetry-core",
    "torch==2.0.0",
]
build-backend = "poetry.core.masonry.api"